--- a/.env.exemple
+++ b/.env.exemple
@@ -1,21 +1,9 @@
-## Titre de l'application
-# DJANGO_SITE_TITLE=The Wagtail Backery
+DJANGO_SETTINGS_MODULE=config.settings.dev
 
-## Clé secrète et activation/Désactivation du mode DEBUG
-# DJANGO_SECRET_KEY=
-# DJANGO_DEBUG=
+DJANGO_SECRET_KEY=une-secrete-key
+DJANGO_DEBUG=True
 
-## Module de settings à utiliser
-# DJANGO_SETTINGS_MODULE=
-
-# DJANGO_PRIMARY_HOST=
-# DJANGO_ALLOWED_HOSTS=
-# DJANGO_DATABASE_URL=
-# DJANGO_USE_PYMYSQL=
-# DJANGO_EMAIL_URL=
-# DJANGO_ADMIN_URL=
-# WAGTAIL_ADMIN_URL=
-
-# Configuration des répertoires pour les fichiers statiques et les fichiers de media
-# DJANGO_STATIC_ROOT=
-# DJANGO_MEDIA_ROOT=
+DJANGO_PRIMARY_HOST=localhost:8000
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_DATABASE_URL=sqlite:///db.sqlite3
+DJANGO_EMAIL_URL=consolemail:///
